# image_classify_script

./: .gitignore  __interface.py  __main.py  classify.py  database.sqlite  file_name_schema.md  logger.py  main.py  model.py  pyproject.toml
imageclassfier/: __init__.py  classify.py  logger.py  model.py
