[tool.poetry]
name = "imageclassfier"
version = "0.1.0"
description = ""
authors = ["CherryGS <tickten@outlook.com>"]
readme = "README.md"
packages = [{ include = "imageclassfier" }]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.19"

[tool.poetry.scripts]
img = "imageclassfier:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
